# moradia-ifpe

./: Procfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
contrib/: init_db.py
contrib/database/: beneficiario.json  curso.json  orientacao_sexual.json  origem_escolar.json  passo.json  raca.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: Streadsheet.vue
frontend/src/router/: index.js
moradia_ifpe/: asgi.py  settings.py  urls.py  wsgi.py
moradia_ifpe/aluno/: admin.py  apps.py  models.py  urls.py  views.py
moradia_ifpe/aluno/api/: serializers.py  viewsets.py
moradia_ifpe/aluno/functions/: getpoints.py
moradia_ifpe/aluno/migrations/: 0001_initial.py  0002_auto_20220923_0004.py  0003_edital.py  0004_aluno_edital.py  0005_auto_20220924_2100.py  0006_auto_20220924_2106.py
moradia_ifpe/core/: apps.py  urls.py  views.py
moradia_ifpe/core/templates/: dashboard.html  import_spreadsheet.html  main_page.html
moradia_ifpe/core/tests/: tests_app.py  tests_wsgi.py
moradia_ifpe/dashboard/: apps.py  urls.py  views.py
moradia_ifpe/spreadsheet/: admin.py  apps.py  forms.py  models.py
moradia_ifpe/spreadsheet/api/: serializers.py  viewsets.py
moradia_ifpe/user/: admin.py  apps.py  models.py
templates/: dashboard.html  import_spreadsheet.html  login.html  logout.html  not_permission.html  read_spreadsheet.html  register.html
templates/base/: base.html  footer.html  menu.html  navbar.html  sidebar-right.html
templates/student/: list.html
(+10 files in other folders)
